; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_fmsg_arr_pair_nest_start.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_devlink.c_devlink_fmsg_arr_pair_nest_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devlink_fmsg = type { i32 }

@DEVLINK_ATTR_FMSG_ARR_NEST_START = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @devlink_fmsg_arr_pair_nest_start(%struct.devlink_fmsg* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.devlink_fmsg*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.devlink_fmsg* %0, %struct.devlink_fmsg** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.devlink_fmsg*, %struct.devlink_fmsg** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @devlink_fmsg_pair_nest_start(%struct.devlink_fmsg* %7, i8* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %23

14:                                               ; preds = %2
  %15 = load %struct.devlink_fmsg*, %struct.devlink_fmsg** %4, align 8
  %16 = load i32, i32* @DEVLINK_ATTR_FMSG_ARR_NEST_START, align 4
  %17 = call i32 @devlink_fmsg_nest_common(%struct.devlink_fmsg* %15, i32 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %3, align 4
  br label %23

22:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %20, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @devlink_fmsg_pair_nest_start(%struct.devlink_fmsg*, i8*) #1

declare dso_local i32 @devlink_fmsg_nest_common(%struct.devlink_fmsg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
